--- a/data/dynamicvizproj3.ipynb
+++ b/data/dynamicvizproj3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/adrianapsay/dsc106/project2'"
+       "'/Users/adrianapsay/dsc106/project3/D3STROYERS/data'"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -487,19 +487,19 @@
        "19                                 NaN                          13201.0  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dexcom_001 = pd.read_csv('/Users/adrianapsay/dsc106/project2/Dexcom_001.csv')\n",
+    "dexcom_001 = pd.read_csv('/Users/adrianapsay/dsc106/project3/D3STROYERS/data/Dexcom_001.csv')\n",
     "dexcom_001.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "[2561 rows x 12 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "Name: Time, Length: 2561, dtype: object"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "[2561 rows x 5 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,16 +1032,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "foodlog_001 = pd.read_csv('/Users/adrianapsay/dsc106/project2/Food_Log_001.csv')"
+    "foodlog_001 = pd.read_csv('/Users/adrianapsay/dsc106/project3/D3STROYERS/data/Food_Log_001.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "[61 rows x 14 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
        "2020-02-22  40.000000  26.000000       26.0  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
        "2020-02-22   82.000000       5.600000  40.000000  26.000000       26.0  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1971,11 +1971,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dexcom_001 = pd.read_csv('/Users/adrianapsay/dsc106/project2/Dexcom_001.csv')\n",
+    "dexcom_001 = pd.read_csv('/Users/adrianapsay/dsc106/project3/D3STROYERS/data/Dexcom_001.csv')\n",
     "dexcom_001.rename(columns={'Timestamp (YYYY-MM-DDThh:mm:ss)':'Date and Time'}, inplace=True)\n",
     "dexcom_001 = dexcom_001[12:].reset_index()\n",
     "dexcom_001.drop(columns=['index', 'Index'], inplace=True)\n",
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2277,13 +2277,13 @@
        "[61 rows x 14 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foodlog_001 = pd.read_csv('/Users/adrianapsay/dsc106/project2/Food_Log_001.csv')\n",
+    "foodlog_001 = pd.read_csv('/Users/adrianapsay/dsc106/project3/D3STROYERS/data/Food_Log_001.csv')\n",
     "foodlog_001['date'] = pd.to_datetime(foodlog_001['date'])\n",
     "foodlog_001['time'] = pd.to_datetime(foodlog_001['time'], format='%H:%M:%S').dt.time\n",
     "foodlog_001.rename(columns={'date': 'Date', 'time': 'Time'}, inplace=True)\n",
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2331,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2704,7 @@
        "[2622 rows x 26 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,7 +2729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2739,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3125,7 +3125,7 @@
        "[2622 rows x 29 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3136,7 +3136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3181,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3231,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3245,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3256,17 +3256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_47123/3729833697.py:47: UserWarning:\n",
-      "\n",
-      "Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
-      "\n"
+      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_48197/3729833697.py:47: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
+      "  plt.tight_layout()\n"
      ]
     },
     {
@@ -3333,17 +3331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_47123/3687394293.py:50: UserWarning:\n",
-      "\n",
-      "Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
-      "\n"
+      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_48197/3687394293.py:50: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
+      "  plt.tight_layout()\n"
      ]
     },
     {
@@ -3413,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3429,7 @@
        "Name: Time, Length: 61, dtype: object"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3444,7 +3440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3474,17 +3470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_47123/3584419624.py:77: UserWarning:\n",
-      "\n",
-      "Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
-      "\n"
+      "/var/folders/25/kkk3f6t17wgccfwtp18f1j5h0000gn/T/ipykernel_48197/3584419624.py:77: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
+      "  plt.tight_layout()\n"
      ]
     },
     {
@@ -3581,7 +3575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3661,7 +3655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
